# ElectricDesign

./: usb+ch340c.txt
17/: 17.eddx  X-Y.7z  计算机流程图模板.eddx
17/DAC/Output/: adc3.crf  atk_f103.build_log.htm  atk_f103.htm  atk_f103.lnp  atk_f103.map  atk_f103_DAC.dep  dac.d  key.d  lcd.d  led.d  main.crf  startup_stm32f103xe.lst  sys.crf  usmart_config.crf  usmart_port.crf  usmart_str.crf  usmart_str.d
17/SignalGenerator/Project/: AD9854.uvguix.Euryt  AD9854.uvguix.VISIER  AD9854.uvoptx
17/SignalGenerator/User/: AnalysisCmd.h  main.c
17/X-Y/: 17.ioc
17/X-Y/MDK-ARM/: 17.uvguix.VISIER  17.uvoptx  17.uvprojx
17E/: ascii_TNR_16.zi
17E/DAC/Output/: adc3.d  atk_f103.hex  dac.crf  delay.crf  delay.d  key.crf  lcd.crf  led.crf  main.d  sys.d  usart.crf  usart.d  usmart.crf  (+3 more)
17E/X-Y Final/: .mxproject  17.ioc
17H/: .mxproject  17H.ioc
17H/MDK-ARM/: 17H.uvguix.VISIER  17H.uvoptx  17H.uvprojx
19G/: 19年G题.eddx
25JLCE/: FlowChart.eddx  fangsong24_gb2312.zi
25JLCE/AD9854_HAL/: .mxproject  AD9854_HAL.ioc
25JLCE/SigGen/: CMakeCache.txt  CMakeLists.txt  DG4202.c  DG4202.h  main.c  process.py  serial.c
25JLCE/py/: data.json  deal_data.py  generator_c.py  main.py  polynomial_fit_coefficients_degree_1.json  polynomial_fit_coefficients_degree_2.json  polynomial_fit_coefficients_degree_3.json  polynomial_fit_coefficients_degree_4.json  polynomial_fit_coefficients_degree_5.json  polynomial_fit_coefficients_degree_6.json
AD9959_HAL/: AD9959_HAL.ioc
AD9959_HAL/MDK-ARM/: AD9959_HAL.uvguix.VISIER  AD9959_HAL.uvoptx  AD9959_HAL.uvprojx  startup_stm32f103xe.lst
(+377 files in other folders)
